added new page and updated links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <h3 class="heading">Bunny Schaefer</h3>
       <nav role="navigation" class="nav-menu">
         <!-- <a href="/index.html" aria-current="page" class="link-nav">Home</a> -->
-        <a href="/about" class="link-nav">About</a>
+        <!-- <a href="/about" class="link-nav">About</a> -->
+        <a href="https://www.linkedin.com/in/bunnyschaefer/" target="_blank" class="link-nav">Find me on Linkedin</a>
+        <a href="https://github.com/CoderBunnyS" target="_blank" class="link-nav">Check out my Github</a>
+        <a href="resume.html" target="_blank" class="footer-links">Peruse my Resume</a>  
         <a href="mailto:schaeferbunny@gmail.com" target="_blank" class="link-nav">Email Me</a>
       </nav>
       <div>
@@ -39,9 +42,8 @@
         </ul>
     </div>
           <div class="links">
-            <a href="https://www.linkedin.com/in/bunnyschaefer/" target="_blank" class="footer-links">Linkedin</a>
-            <a href="https://github.com/CoderBunnyS" target="_blank" class="footer-links">Github</a>
-            <a href="/image-license-image" target="_blank" class="footer-links">Image License Info</a>
+            
+            <!-- <a href="/image-license-image" target="_blank" class="footer-links">Image License Info</a> -->
           </div>
       </div>
     </div>
