began adding colors and fonts

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bunny Schaefer</title>
-    <link rel="stylesheet" type="text/css" href="css_bunny.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <div>
-      <h3 class="heading">Bunny Schaefer</h3>
+      <h1 class="heading">Bunny Schaefer</h1>
       <nav role="navigation" class="nav-menu">
         <!-- <a href="/index.html" aria-current="page" class="link-nav">Home</a> -->
         <!-- <a href="/about" class="link-nav">About</a> -->
@@ -22,14 +22,14 @@
       </div>
     </div>
            <div class=>
-          <h1 >Hello, thanks for visiting!</h1>
+          <h2 >Hello, thanks for visiting!</h2>
         </div>
           <p>I'm Bunny! A solutions engineer focused on identity and access management. My communication skills coupled with my technical acumen make me a strong member of a technical team. I believe in teamwork and a culture of open communication so everyone has a voice. I am, at heart, a helper. I want to know that my work has helped make things better. I tend to be the person that everyone comes to with questions, thoughts or coffee, I promise to be a safe place and to offer a positive outlook</p>
         </div>
       </div>
     </div>
     <div>
-        <h1>Projects</h1>
+        <h2>Projects</h2>
         <p>Below are some of the projects that I've worked on. These projects focus on access and identity, html, javascript, and react. Feel free to click on any of the projects listed below to open the deployed application.
           
         </div>
