further ui tweaks

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Bunny Schaefer</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
@@ -27,7 +27,7 @@
            <div class=>
           <h2 >Hello, thanks for visiting!</h2>
         </div>
-          <p>I'm Bunny! A solutions engineer focused on identity and access management. My communication skills coupled with my technical acumen make me a strong member of a technical team. I believe in teamwork and a culture of open communication so everyone has a voice. I am, at heart, a helper. I want to know that my work has helped make things better. I tend to be the person that everyone comes to with questions, thoughts or coffee, I promise to be a safe place and to offer a positive outlook</p>
+          <p>Hello, I'm Bunny! As a solutions engineer, my primary focus is on building strong client relationships. My combination of communication skills and technical expertise enables me to contribute effectively to any technical team. I firmly believe in the power of teamwork and fostering a culture of open communication where everyone's voice is heard. At my core, I am a helper, driven by the desire to make a positive impact. People often turn to me for guidance, whether it's to seek answers, share thoughts, or even just to grab a cup of coffee. I assure you that I provide a safe space for discussions and always maintain a positive outlook.</p>
         </div>
       </div>
     </div>
