--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="mailto:schaeferbunny@gmail.com" target="_blank" class="link-nav">Email Me</a>
       </nav>
       <div>
-        <div></div>
+        <div><button href="login.html">Login Practice</button></div>
       </div>
     </div>
            <div class=>
