--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <a href="resume.html" target="_blank" class="footer-links">Peruse my Resume</a>  
         <a href="mailto:schaeferbunny@gmail.com" target="_blank" class="link-nav">Email Me</a>
       </nav>
-      <div>
-        <div><button href="login.html">Login Practice</button></div>
+        
       </div>
     </div>
            <div class=>
@@ -37,6 +36,12 @@
           
         </div>
     <div>
+      <div>
+        <a href="login.html"><button >Login Practice</button></a>
+        <a href="https://activitygenerator.vercel.app/" target="_blank"><button href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</button></a>
+        <a href="https://cocktailparty.netlify.app/" target="_blank"><button href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</button></a>
+        <a href="https://harvard-project.vercel.app/" target="_blank"><button href="https://harvard-project.vercel.app/" target="_blank">Harvard History and Art Museum Collection Site</button></a>
+      </div>
         <ul>
             <li><a href="login.html">Login Practice</a></li>
             <li><a href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</a></li>
