updated from UL to buttons

--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
           
         </div>
     <div>
+      <!-- Project Buttons -->
       <div>
         <a href="login.html"><button >Login Practice</button></a>
         <a href="https://activitygenerator.vercel.app/" target="_blank"><button href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</button></a>
         <a href="https://cocktailparty.netlify.app/" target="_blank"><button href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</button></a>
         <a href="https://harvard-project.vercel.app/" target="_blank"><button href="https://harvard-project.vercel.app/" target="_blank">Harvard History and Art Museum Collection Site</button></a>
       </div>
-        <ul>
+        <!-- <ul>
             <li><a href="login.html">Login Practice</a></li>
             <li><a href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</a></li>
             <li><a href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</a></li>
             <li><a href="https://harvard-project.vercel.app/" target="_blank">Harvard History and Art Museum Collection Site</a></li>
-        </ul>
+        </ul> -->
     </div>
           <div class="links">
             
