--- a/index.html
+++ b/index.html
@@ -17,27 +17,29 @@
         <!-- <a href="/about" class="link-nav">About</a> -->
         <a href="https://www.linkedin.com/in/bunnyschaefer/" target="_blank" class="link-nav">Find me on Linkedin</a>
         <a href="https://github.com/CoderBunnyS" target="_blank" class="link-nav">Check out my Github</a>
-        <a href="resume.html" target="_blank" class="footer-links">Peruse my Resume</a>  
+        <a href="resume.html" target="_blank" class="link-nav">Peruse my Resume</a>  
         <a href="mailto:schaeferbunny@gmail.com" target="_blank" class="link-nav">Email Me</a>
       </nav>
         
       </div>
     </div>
-           <div class=>
-          <h2 >Hello, thanks for visiting!</h2>
+           <div class="site-info">
+          <h2 >Thanks for visiting!</h2>
         </div>
-          <p>Hello, I'm Bunny! As a solutions engineer, my primary focus is on building strong client relationships. My combination of communication skills and technical expertise enables me to contribute effectively to any technical team. I firmly believe in the power of teamwork and fostering a culture of open communication where everyone's voice is heard. At my core, I am a helper, driven by the desire to make a positive impact. People often turn to me for guidance, whether it's to seek answers, share thoughts, or even just to grab a cup of coffee. I assure you that I provide a safe space for discussions and always maintain a positive outlook.</p>
+        <div class="site-info">
+          <p>I'm Bunny! As a solutions engineer, my primary focus is on building strong client relationships. My combination of communication skills and technical expertise enables me to contribute effectively to any technical team. I firmly believe in the power of teamwork and fostering a culture of open communication where everyone's voice is heard. At my core, I am a helper, driven by the desire to make a positive impact. People often turn to me for guidance, whether it's to seek answers, share thoughts, or even just to grab a cup of coffee. I assure you that I provide a safe space for discussions and always maintain a positive outlook.</p>
+        </div>
         </div>
       </div>
     </div>
-    <div>
+    <div class="site-info">
         <h2>Projects</h2>
         <p>Below are some of the projects that I've worked on. These projects focus on access and identity, html, javascript, and react. Feel free to click on any of the projects listed below to open the deployed application.
           
         </div>
     <div>
       <!-- Project Buttons -->
-      <div>
+      <div class="project-buttons">
         <a href="login.html"><button >Login Practice</button></a>
         <a href="https://activitygenerator.vercel.app/" target="_blank"><button href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</button></a>
         <a href="https://cocktailparty.netlify.app/" target="_blank"><button href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</button></a>
