--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Login below to gain access to otherwise hidden information</h1>
-    <div></div>
+    <div>
+        
+    </div>
 </body>
 </html>
