--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <button href="/index.html">Go Home</button>
     <h2>SPA Authentication Sample</h2>
     <p>Welcome to our page!</p>
     <button id="btn-login" disabled="true" onclick="login()">Log in</button>
