--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
 </head>
 <body>
     <div>
@@ -63,6 +64,12 @@
             <!-- <a href="/image-license-image" target="_blank" class="footer-links">Image License Info</a> -->
           </div>
       </div>
+      <h1>Login</h1>
+      <h2>SPA Authentication Sample</h2>
+      <p>Welcome to our page!</p>
+      <button id="btn-login" disabled="true" onclick="login()">Log in</button>
+      <button id="btn-logout" disabled="true" onclick="logout()">Log out</button>
+      <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     </div>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="/javascript.js" type="text/javascript"></script>
