--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div>
       <!-- Project Buttons -->
       <div class="project-buttons">
-        <a href="login.html"><button >Login Practice</button></a>
-        <a href="https://activitygenerator.vercel.app/" target="_blank"><button href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</button></a>
-        <a href="https://cocktailparty.netlify.app/" target="_blank"><button href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</button></a>
-        <a href="https://harvard-project.vercel.app/" target="_blank"><button href="https://harvard-project.vercel.app/" target="_blank">Harvard History and Art Museum Collection Site</button></a>
+        <!-- <a href="login.html"><button >Login Practice</button></a> -->
+        <a href="https://activitygenerator.vercel.app/" target="_blank"><button class = "buttons" href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</button></a>
+        <a href="https://cocktailparty.netlify.app/" target="_blank"><button class = "buttons" href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</button></a>
+        <a href="https://harvard-project.vercel.app/" target="_blank"><button class = "buttons" href="https://harvard-project.vercel.app/" target="_blank">Harvard Art Museum</button></a>
       </div>
         <!-- <ul>
             <li><a href="login.html">Login Practice</a></li>
