--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- Project Buttons -->
       <div class="project-buttons">
         <!-- <a href="login.html"><button >Login Practice</button></a> -->
-        <a href="https://activitygenerator.vercel.app/" target="_blank"><button class = "buttons" href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</button></a>
+        <a href="https://activitygenerator.vercel.app/" target="_blank"><button class = "buttons" href="https://activitygenerator.vercel.app/" target="_blank" id="idea">Idea Generator</button></a>
         <a href="https://cocktailparty.netlify.app/" target="_blank"><button class = "buttons" href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</button></a>
         <a href="https://harvard-project.vercel.app/" target="_blank"><button class = "buttons" href="https://harvard-project.vercel.app/" target="_blank">Harvard Art Museum</button></a>
       </div>
