updated link to resume

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- <a href="/about" class="link-nav">About</a> -->
         <a href="https://www.linkedin.com/in/bunnyschaefer/" target="_blank" class="link-nav">Find me on Linkedin</a>
         <a href="https://github.com/CoderBunnyS" target="_blank" class="link-nav">Check out my Github</a>
-        <a href="resume.html" target="_blank" class="link-nav">Peruse my Resume</a>  
+        <a href="https://drive.google.com/file/d/1RHsinZdshRG2vWN6LXZ7qgrUZjSTuouj/view?usp=drive_link" target="_blank" class="link-nav">Peruse my Resume</a>  
         <a href="mailto:schaeferbunny@gmail.com" target="_blank" class="link-nav">Email Me</a>
       </nav>
         
