redeployed and added some assets

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
            <div class="site-info">
           
         </div>
+        <div>
+          <!-- <img src="/assets/BunnyPic.jpg" alt="Bunny's headshot" /> -->
+        </div>
         <div class="site-info">
           <p>I'm Bunny, a passionate Solutions Engineer with a primary focus on fostering strong and meaningful client relationships. Through a harmonious blend of excellent communication skills and technical expertise, I actively contribute to the success of any technical team I work with. I firmly believe in the power of collaboration and strive to cultivate a culture of open communication, where every team member's voice is valued and heard.
             <br>
