more styling tweaks

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     </div>
 
     <div>
-      <!-- Project Buttons -->
-      <div class="project-buttons">
-        <a href="https://bunnysblog.onrender.com/" target="_blank"
+
+    <div class="project-buttons">
+        <div><a href="https://bunnysblog.onrender.com/" target="_blank"
           ><button
             class="buttons"
             href="https://bunnysblog.onrender.com/"
@@ -100,6 +100,10 @@
             Full Stack MERN Blog
           </button></a
         >
+      </div>
+        <br />
+        <br />
+        <div>
         <a href="https://activitygenerator.vercel.app/" target="_blank"
           ><button
             class="buttons"
@@ -110,7 +114,10 @@
             Activity Idea Generator
           </button></a
         >
-
+      </div>
+        <br>
+        <br />
+        <div>
         <a href="https://cocktailparty.netlify.app/" target="_blank"
           ><button
             class="buttons"
@@ -120,6 +127,10 @@
             Cocktail Party Recipes
           </button></a
         >
+      </div>
+        <br>
+        <br />
+        <div>
         <a href="https://harvard-project.vercel.app/" target="_blank"
           ><button
             class="buttons"
@@ -130,17 +141,14 @@
           </button></a
         >
       </div>
-      <!-- <ul>
-            <li><a href="login.html">Login Practice</a></li>
-            <li><a href="https://activitygenerator.vercel.app/" target="_blank">Idea Generator</a></li>
-            <li><a href="https://cocktailparty.netlify.app/" target="_blank">Cocktail Recipes</a></li>
-            <li><a href="https://harvard-project.vercel.app/" target="_blank">Harvard History and Art Museum Collection Site</a></li>
-        </ul> -->
+      </div>
+    </div>
+
     </div>
     <div>
       <h2>Thanks for visiting!</h2>
     </div>
-    <div class="links">
+    <div class="links"> 
       <!-- <a href="/image-license-image" target="_blank" class="footer-links">Image License Info</a> -->
     </div>
     <!-- <script src="/javascript.js" type="text/javascript"></script> -->
