updated link to resume

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >Check out my Github</a
         >
         <a
-          href="https://drive.google.com/file/d/1RHsinZdshRG2vWN6LXZ7qgrUZjSTuouj/view?usp=drive_link"
+          href="https://docs.google.com/document/d/1UUHL5pqMfPNtgrBQ6antnfWcsQdGq1V3A_CrYYsfNvE/edit?usp=sharing"
           target="_blank"
           class="link-nav"
           >Peruse my Resume</a
