began new styling technique

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <body>
     <div>
       <h1 class="heading">Bunny Schaefer</h1>
+      <video autoplay muted loop id="myVideo">
+        <source src="./assets/Video.mp4" type="video/mp4" />
+    </div>
+    <div>
+      
       <nav role="navigation" class="nav-menu">
         <!-- <a href="/index.html" aria-current="page" class="link-nav">Home</a> -->
         <!-- <a href="/about" class="link-nav">About</a> -->
