almost complete with second portion styling

--- a/index.html
+++ b/index.html
@@ -7,19 +7,43 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Arimo&family=IBM+Plex+Serif:wght@700&family=Montserrat:wght@100;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
   </head>
   <body>
-    <div>
-      <h1 class="heading">Bunny Schaefer</h1>
+    <div class="intro">
+      <div class="intro-text">
+
+        <h1 class="heading">Bunny Schaefer</h1>
+        <h2 class="subheading">Solutions Engineer</h2>
+        <p class="pronouns">(she/her)</p>
+      </div>
+      </div>
       <video autoplay muted loop id="myVideo">
         <source src="./assets/Video.mp4" type="video/mp4" />
+      </video>
     </div>
-    <div>
+    <div class="about">
+      <img
+      src="./assets/BunnyPic.jpg"
+      alt="Bunny's headshot"
+      class="headshot"
+    />
+    <div class="boxes">
+      <div class="colorBox"></div>
+      <div class="description">
+        <p>Three words to describe myself:</p>
+        <br>Innovative, <br>Adaptable, <br>Results-Driven</h2>
+
+      </div>  
+      </div>
+      </div> 
+
+    
       
       <nav role="navigation" class="nav-menu">
         <!-- <a href="/index.html" aria-current="page" class="link-nav">Home</a> -->
@@ -52,11 +76,7 @@
     </div>
 
     <div class="site-info">
-      <img
-        src="./assets/BunnyPic.jpg"
-        alt="Bunny's headshot"
-        class="headshot"
-      />
+
       <p>
         <br /><br />I'm Bunny, a Solutions Engineer who specializes in building
         strong client relationships. I use my communication skills and technical
