almost complete with second portion styling

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </div>
     <div class="about">
       <img
-      src="./assets/BunnyPic.jpg"
+      src="./assets/BunnyPic50.png"
       alt="Bunny's headshot"
       class="headshot"
     />
     <div class="boxes">
       <div class="colorBox"></div>
       <div class="description">
-        <p>Three words to describe myself:</p>
+        <p class="sanSerif">Three words to describe myself:</p>
         <br>Innovative, <br>Adaptable, <br>Results-Driven</h2>
 
       </div>  
