new styling of headshot and resume

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="colorBox"></div>
         <div class="description">
           <p class="sanSerif">Three words to describe myself:</p>
-          <h2><br />Innovative, <br />Adaptable, <br />Results-Driven</h2>
+          <h3 class="serif"><br />Innovative, <br />Adaptable, <br />Results-Driven</h3>
         </div>
       </div>
     </div>
@@ -52,13 +52,10 @@
           Education & <br />
           Experience
         </h2>
-        <h2>
-          HERE I AM, COME FIND ME!!! <br />Education & <br />
-          Experience
-        </h2>
+        </div>
         <div clas="resumeFormat">
           <div class="yearInput">
-            <h4>2021</h4>
+            <h4 class="resumeYear">2021</h4>
             <h3>Solutions Engineer</h3>
             <h4>Auth0/Okta</h4>
             <p>
@@ -68,7 +65,7 @@
               great satisfaction.
             </p>
           </div>
-          <div class="yearInput">
+          <div class="resumeYear">
             <h4>2021</h4>
             <h3>Teaching/Instructional Assistant - Contract</h3>
             <h4>General Assembly</h4>
@@ -79,7 +76,7 @@
               potential.
             </p>
           </div>
-          <div class="yearInput">
+          <div class="resumeYear">
             <h4>2020</h4>
             <h3>Full Stack Software Engineering Course</h3>
             <h4>General Assembly</h4>
