updating project description

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                     <h2 class="projectTitles">Project 1</h2>
                     <br>
                     <br>
-                    <p>Presenting 'Activity Generator', a unique web application crafted during the COVID lockdown, designed to invigorate the daily lives of those at home seeking new and engaging activities. Built with HTML, CSS, and JavaScript, it features an intuitive system that utilizes API calls to suggest a variety of activities, perfectly suited for individuals looking to break the monotony of lockdown life. This project not only showcases my skills in creating responsive and user-friendly web applications but also reflects my ability to empathize with user needs during challenging times. 'Activity Generator' stands as a testament to my commitment to developing solutions that are both innovative and practical, offering users a simple yet effective way to find enjoyable activities.
-                    </p>
+                    <p>"Introducing 'Bunny's Solution Engineering Blog', a sophisticated and interactive blogging platform developed using the MERN stack (MongoDB, Express.js, React, and Node.js). This blog stands out with its full CRUD capabilities, ensuring a seamless and intuitive user experience for both content creators and readers. My expertise in full-stack web development is showcased through the blog's dynamic and responsive design, prioritizing top-notch performance and robust security. The platform reflects my commitment to blending technical excellence with user-centric design, making it an ideal space for sharing insights and engaging with a community interested in solution engineering."</p>
                 </div>
             </a>
             <a href="https://cocktailparty.netlify.app/" class="project" target="_blank">
