updated project 4 to trivia, made small changes to text for styling and to correct a small error

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <section id="projects" class="section">
     <div class="container">
-        <h1>My Projects</h1>
+        <h1 class="projectTitles">My Projects</h1>
         <div class="project-grid">
             <a href="https://bunnysblog.onrender.com/" class="project" target="_blank">
                 <div>
@@ -53,7 +53,7 @@
                     <h2 class="projectTitles">Project 1</h2>
                     <br>
                     <br>
-                    <p>"Introducing 'Bunny's Solution Engineering Blog', a sophisticated and interactive blogging platform developed using the MERN stack (MongoDB, Express.js, React, and Node.js). This blog stands out with its full CRUD capabilities, ensuring a seamless and intuitive user experience for both content creators and readers. My expertise in full-stack web development is showcased through the blog's dynamic and responsive design, prioritizing top-notch performance and robust security. The platform reflects my commitment to blending technical excellence with user-centric design, making it an ideal space for sharing insights and engaging with a community interested in solution engineering."</p>
+                    <p>Introducing 'Bunny's Solution Engineering Blog', a sophisticated and interactive blogging platform developed using the MERN stack (MongoDB, Express.js, React, and Node.js). This blog stands out with its full CRUD capabilities, ensuring a seamless and intuitive user experience for both content creators and readers. My expertise in full-stack web development is showcased through the blog's dynamic and responsive design, prioritizing top-notch performance and robust security. The platform reflects my commitment to blending technical excellence with user-centric design, making it an ideal space for sharing insights and engaging with a community interested in solution engineering.</p>
                 </div>
             </a>
             <a href="https://cocktailparty.netlify.app/" class="project" target="_blank">
@@ -74,13 +74,13 @@
                     <p>Introducing 'Cocktail Disco', a vibrant and interactive React-based web application designed for cocktail enthusiasts. This engaging platform features a user-friendly search bar, allowing users to discover a wide array of cocktail recipes with ease. Each search initiates an API call, fetching curated cocktail suggestions tailored to the user's preferences. What sets 'Cocktail Disco' apart is its smart functionality to remember and display the user’s last three searches, enhancing the experience by keeping track of their recent explorations. This project is a perfect blend of my technical prowess in React development and my innovative approach to enhancing user engagement. 'Cocktail Disco' is not just an app; it's an experience, inviting users to explore the exciting world of cocktails in a fun, interactive way, while showcasing my commitment to creating intuitive and responsive web applications.</p>
                 </div>
             </a>
-            <a href="https://movie-app-mu-orpin.vercel.app/" class="project" target="_blank">
+            <a href="https://coderbunnys.github.io/trivia/index.html" class="project" target="_blank">
                 <div>
                     <img src="./assets/project4.png" alt="Project 4">
                     <h2 class="projectTitles">Project 4</h2>
                     <br>
                     <br>
-                    <p>Explore 'What to Watch', a bespoke React application designed to revolutionize the way users choose movies and TV shows. This intuitive app allows users to effortlessly search by name or keywords, offering them the flexibility to filter results based on their preference for movies, television series, or even specific episodes. Each search initiates a sophisticated API call, delivering a curated selection of viewing suggestions that cater to the user's unique tastes. 'What to Watch' stands out for its user-centric design and seamless functionality, showcasing my expertise in creating dynamic React applications. This project is more than just a tool; it's an interactive guide, assisting users in navigating the vast world of entertainment with ease and precision, while demonstrating my commitment to building responsive, user-friendly, and innovative web solutions.</p>
+                    <p>Dive into 'Test Your Knowledge', a captivating trivia game designed to challenge and educate. Crafted meticulously with HTML, CSS, and JavaScript, this application offers a rich collection of trivia questions across diverse topics, each with four potential answers. The game's interface is both intuitive and visually appealing, with correct choices turning green and incorrect ones red, providing immediate and clear feedback. What sets this game apart is its engaging scoring system, which not only tracks scores in real-time but also rewards high scorers by featuring their names on an exclusive high-score list. 'Test Your Knowledge' is a testament to my expertise in front-end development and my passion for creating interactive, educational, and user-friendly web experiences.</p>
                 </div>
             </a>
         </div>
