--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li> <a href="tel:+12063551182" target="_blank">
                     <img src="./assets/phone.svg" alt="Phone" class="contact-icon">
                 </a></li>
-                <li><a href="https://www.linkedin.com/in/bunnyschaefer/" target="_blank">
+                <li class="rightIcon"><a href="https://www.linkedin.com/in/bunnyschaefer/" target="_blank">
                     <img src="./assets/LinkedIn.svg" alt="LinkedIn" class="contact-icon">
                 </a></li>
             </ul>
