updated link to project 2 after updating API info for that project

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p>Introducing 'Bunny's Solution Engineering Blog', a sophisticated and interactive blogging platform developed using the MERN stack (MongoDB, Express.js, React, and Node.js). This blog stands out with its full CRUD capabilities, ensuring a seamless and intuitive user experience for both content creators and readers. My expertise in full-stack web development is showcased through the blog's dynamic and responsive design, prioritizing top-notch performance and robust security. The platform reflects my commitment to blending technical excellence with user-centric design, making it an ideal space for sharing insights and engaging with a community interested in solution engineering.</p>
                 </div>
             </a>
-            <a href="https://activitygenerator.vercel.app/" class="project" target="_blank">
+            <a href="https://coderbunnys.github.io/DailyInfo/" class="project" target="_blank">
                 <div>
                     <img src="./assets/project2.png" alt="Project 2">
                     <h2 class="projectTitles">Project 2</h2>
