added older projects and restyled grid for more responsiveness:

--- a/index.html
+++ b/index.html
@@ -42,51 +42,68 @@
         </div>
     </section>
 
+    <section id="projects" class="section">
+        <div class="container">
+            <h1 class="projectTitles">My Projects</h1>
+            <div class="project-grid">
 
-<section id="projects" class="section">
-    <div class="container">
-        <h1 class="projectTitles">My Projects</h1>
-        <div class="project-grid">
-            <a href="https://bunnysblog.onrender.com/" class="project" target="_blank">
-                <div>
-                    <img src="./assets/project1.png" alt="Project 1">
-                    <h2 class="projectTitles">Project 1</h2>
-                    <br>
-                    <br>
-                    <p>Introducing 'Bunny's Solution Engineering Blog', a sophisticated and interactive blogging platform developed using the MERN stack (MongoDB, Express.js, React, and Node.js). This blog stands out with its full CRUD capabilities, ensuring a seamless and intuitive user experience for both content creators and readers. My expertise in full-stack web development is showcased through the blog's dynamic and responsive design, prioritizing top-notch performance and robust security. The platform reflects my commitment to blending technical excellence with user-centric design, making it an ideal space for sharing insights and engaging with a community interested in solution engineering.</p>
-                </div>
-            </a>
-            <a href="https://coderbunnys.github.io/DailyInfo/" class="project" target="_blank">
-                <div>
-                    <img src="./assets/project2.png" alt="Project 2">
-                    <h2 class="projectTitles">Project 2</h2>
-                    <br>
-                    <br>
-                    <p>Discover 'Activity Generator,' a web application I developed during the COVID lockdown to offer a spark of inspiration for those confined at home and searching for something new to do. This project, intricately built using HTML, CSS, and JavaScript, stands out for its unique functionality of suggesting diverse activities through API calls, specifically designed for users battling boredom during the pandemic. The 'Activity Generator' is a reflection of my front-end development expertise and my keen understanding of user needs during unprecedented times. Its interface is both straightforward and engaging, ensuring users can effortlessly find enjoyable and unique activities. This application exemplifies how technology can be harnessed to provide practical, timely solutions while maintaining an elegant and user-friendly design.</p>
-                </div>
-            </a>
-            <a href="https://cocktailparty.netlify.app/" class="project" target="_blank">
-                <div>
-                    <img src="./assets/project3.png" alt="Project 3">
-                    <h2 class="projectTitles">Project 3</h2>
-                    <br>
-                    <br>
-                    <p>Introducing 'Cocktail Disco', a vibrant and interactive React-based web application designed for cocktail enthusiasts. This engaging platform features a user-friendly search bar, allowing users to discover a wide array of cocktail recipes with ease. Each search initiates an API call, fetching curated cocktail suggestions tailored to the user's preferences. What sets 'Cocktail Disco' apart is its smart functionality to remember and display the user’s last three searches, enhancing the experience by keeping track of their recent explorations. This project is a perfect blend of my technical prowess in React development and my innovative approach to enhancing user engagement. 'Cocktail Disco' is not just an app; it's an experience, inviting users to explore the exciting world of cocktails in a fun, interactive way, while showcasing my commitment to creating intuitive and responsive web applications.</p>
-                </div>
-            </a>
-            <a href="https://coderbunnys.github.io/trivia/index.html" class="project" target="_blank">
-                <div>
-                    <img src="./assets/project4.png" alt="Project 4">
-                    <h2 class="projectTitles">Project 4</h2>
-                    <br>
-                    <br>
-                    <p>Dive into 'Test Your Knowledge', a captivating trivia game designed to challenge and educate. Crafted meticulously with HTML, CSS, and JavaScript, this application offers a rich collection of trivia questions across diverse topics, each with four potential answers. The game's interface is both intuitive and visually appealing, with correct choices turning green and incorrect ones red, providing immediate and clear feedback. What sets this game apart is its engaging scoring system, which not only tracks scores in real-time but also rewards high scorers by featuring their names on an exclusive high-score list. 'Test Your Knowledge' is a testament to my expertise in front-end development and my passion for creating interactive, educational, and user-friendly web experiences.</p>
-                </div>
-            </a>
+                <!-- 1. Bunny's Solution Engineering Blog (most technical, MERN stack with Auth0) -->
+                <a href="https://bunnysblog.onrender.com/" class="project" target="_blank">
+                    <div>
+                        <img src="./assets/project1.png" alt="Bunny's Solution Engineering Blog">
+                        <h2 class="projectTitles">Bunny's Solution Engineering Blog</h2>
+                        <p>This MERN stack blog showcases my expertise in full-stack development, featuring complete CRUD functionality, seamless user authentication with Auth0, and a responsive design. Built for solution engineers, this interactive platform fosters community engagement while ensuring robust performance and security. The blog not only delivers a smooth user experience but also demonstrates the depth of my skills in developing scalable web applications with MongoDB, Express, React, and Node.js.</p>
+                    </div>
+                </a>
+
+                <!-- 2. Test Your Knowledge (HTML, CSS, JS trivia game) -->
+                <a href="https://coderbunnys.github.io/trivia/index.html" class="project" target="_blank">
+                    <div>
+                        <img src="./assets/project4.png" alt="Test Your Knowledge">
+                        <h2 class="projectTitles">Test Your Knowledge</h2>
+                        <p>Built with HTML, CSS, and JavaScript, this trivia game challenges users with a diverse set of questions and tracks their progress in real-time. The game’s scoring system highlights high achievers on a leaderboard, adding a competitive element to the experience. By providing immediate feedback for correct or incorrect answers and showcasing my attention to detail in both the design and logic, this app demonstrates my front-end development skills in creating interactive, engaging user experiences.</p>
+                    </div>
+                </a>
+
+                <!-- 3. Activity Generator (HTML, CSS, JS, API integration) -->
+                <a href="https://coderbunnys.github.io/DailyInfo/" class="project" target="_blank">
+                    <div>
+                        <img src="./assets/project2.png" alt="Activity Generator">
+                        <h2 class="projectTitles">Activity Generator</h2>
+                        <p>Developed with HTML, CSS, and JavaScript, this web app offers a unique solution for users seeking inspiration during the COVID-19 lockdown. It connects to an external API to provide diverse activity suggestions, from hobbies to tasks, ensuring users always have something new to try. The application is an excellent showcase of my ability to work with APIs and create intuitive, engaging user interfaces, providing practical solutions through technology in difficult times.</p>
+                    </div>
+                </a>
+
+                <!-- 4. Cinematic Explorer (React, API integration) -->
+                <a href="https://cinematicexplorer.com/" class="project" target="_blank">
+                    <div>
+                        <img src="./assets/project5.png" alt="Cinematic Explorer">
+                        <h2 class="projectTitles">Cinematic Explorer</h2>
+                        <p>Cinematic Explorer is a robust React app that allows users to search for movies, TV shows, or episodes by title. Utilizing a movie API, it displays detailed information including a poster image, title, description, release date, and a rating out of 10. The app even provides visual feedback with thumbs up or thumbs down icons based on the rating. Additionally, it stores the last three searches for quick access, showcasing my proficiency in React and API integration to build highly interactive and useful applications.</p>
+                    </div>
+                </a>
+
+                <!-- 5. Cocktail Disco (React, API integration) -->
+                <a href="https://cocktailparty.netlify.app/" class="project" target="_blank">
+                    <div>
+                        <img src="./assets/project3.png" alt="Cocktail Disco">
+                        <h2 class="projectTitles">Cocktail Disco</h2>
+                        <p>This React-based web application caters to cocktail enthusiasts by providing a sleek, user-friendly interface to explore a wide variety of cocktails. Each search triggers an API call to display curated cocktail recipes, complete with ingredients and preparation steps. The app also stores and displays users’ last three searches, enhancing usability and engagement. The combination of API integration and smooth React development makes this project a perfect example of my ability to create polished, feature-rich web experiences.</p>
+                    </div>
+                </a>
+
+                <!-- 6. Covid Workout Roulette (HTML, CSS, JS, YouTube API) -->
+                <a href="https://covidworkout.vercel.app/#" class="project" target="_blank">
+                    <div>
+                        <img src="./assets/project6.png" alt="Covid Workout Roulette">
+                        <h2 class="projectTitles">Covid Workout Roulette</h2>
+                        <p>Covid Workout Roulette is an innovative web app developed with HTML, CSS, and JavaScript, aimed at keeping users active during the pandemic. It pulls random workout videos from YouTube based on the user’s preferences for activity type (yoga, strength, or cardio) or workout duration. This app provides an engaging way to discover new workouts while demonstrating my ability to integrate external APIs, design engaging interfaces, and build applications that cater to user needs during challenging times.</p>
+                    </div>
+                </a>
+
+            </div>
         </div>
-        </div>
-    </div>
-</section>
+    </section>
 
 <footer>
     <p>&copy; 2024 Bunny Schaefer</p>
