updated incorrect link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </a>
 
                 <!-- 4. Cinematic Explorer (React, API integration) -->
-                <a href="https://cinematicexplorer.com/" class="project" target="_blank">
+                <a href="https://movie-app-mu-orpin.vercel.app/" class="project" target="_blank">
                     <div>
                         <img src="./assets/project5.png" alt="Cinematic Explorer">
                         <h2 class="projectTitles">Cinematic Explorer</h2>
